--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ata-hours",
+  "name": "ata-cashout",
   "version": "1.0.0",
-  "description": "AngularJS implementation of a leave time calculator for ATA",
+  "description": "AngularJS implementation of a leave time cash out calculator for ATA",
   "dependencies": {
     "angular": "^1.3.15",
     "angular-resource": "^1.3.15",
