--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "ata-cashout",
   "version": "1.0.0",
-  "description": "AngularJS implementation of a leave time cash out calculator for ATA",
-  "dependencies": {
-    "angular": "^1.3.15",
-    "bootstrap": "^3.3.4",
-    "jquery": "^2.1.3"
-  },
+  "description": "AngularJS leave time cash out calculator for ATA",
   "devDependencies": {
     "angular-mocks": "^1.3.15",
     "grunt": "~0.4.5",
