--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.10.0",
     "grunt-processhtml": "^0.3.7",
+    "grunt-shell": "^1.1.2",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
