--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "moduleType": ["globals"],
   "dependencies": {
     "angular-ui-select": "~0.11.2",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "fontawesome": "~4.3.0"
   }
 }
